--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,12 @@ email: zsyed91@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A collection of tips, blunders, and experiences of a programmer.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://zshawnsyed.com" # the base hostname & protocol for your site
+url: "http://localhost:4000" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 github_username:  zsyed91
 
 # Build settings
 markdown: kramdown
 pygments: true
-permalink: pretty
+permalink: highlight
 paginate: 10
