--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,16 @@
 name: Zshawn Syed
 title: Zshawn Syed
 email: zsyed91@gmail.com
-description: > # this means to ignore newlines until "baseurl:" 
+description: > # this means to ignore newlines until "baseurl:"
   A collection of tips, blunders, and experiences of a programmer.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://zshawnsyed.com" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
-github_username:  zsyed91
+github_username: zsyed91
 
 # Build settings
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 permalink: pretty
 paginate: 10
+plugins: [jekyll-paginate]
