Rails 6 Series - Deploying to AWS
* Also onboarded the jekyll-toc and jekyll-gist plugins

--- a/_config.yml
+++ b/_config.yml
@@ -14,4 +14,7 @@ markdown: kramdown
 highlighter: rouge
 permalink: pretty
 paginate: 10
-plugins: [jekyll-paginate]
+plugins:
+  - jekyll-paginate
+  - jekyll-toc
+  - jekyll-gist
