--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ markdown: kramdown
 highlighter: rouge
 permalink: pretty
 paginate: 10
+paginate_path: "/blog/page:num"
 plugins:
   - jekyll-paginate
   - jekyll-toc
